--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="row">
           <div class="col-sm-4">
             <a href="" class="thumbnail">
-              <img src="img/portfolio/1.jpg">
+              <img src="img/portfolio/1.JPG">
             </a>
           </div>
           <div class="col-sm-4">
@@ -107,7 +107,7 @@
           </div>
           <div class="col-sm-4">
             <a href="" class="thumbnail">
-              <img src="img/portfolio/3.jpg">
+              <img src="img/portfolio/3.JPG">
             </a>
           </div>
           <div class="col-sm-4">
@@ -123,6 +123,11 @@
           <div class="col-sm-4">
             <a href="" class="thumbnail">
               <img src="img/portfolio/6.jpg">
+            </a>
+          </div>
+          <div class="col-sm-4">
+            <a href="" class="thumbnail">
+              <img src="img/portfolio/7.jpeg">
             </a>
           </div>
         </div>
