Merubah tampilan image

--- a/index.html
+++ b/index.html
@@ -97,37 +97,37 @@
         <div class="row">
           <div class="col-sm-4">
             <a href="" class="thumbnail">
-              <img src="img/portfolio/1.JPG">
+              <img src="img/portfolio/1.JPG" alt="img1" style="width:200px; height:200px;">
             </a>
           </div>
           <div class="col-sm-4">
             <a href="" class="thumbnail">
-              <img src="img/portfolio/2.jpg">
+              <img src="img/portfolio/2.jpg" alt="img2" style="width:200px; height:200px;">
             </a>
           </div>
           <div class="col-sm-4">
             <a href="" class="thumbnail">
-              <img src="img/portfolio/3.JPG">
+              <img src="img/portfolio/3.JPG" alt="img3" style="width:200px; height:200px;">
             </a>
           </div>
           <div class="col-sm-4">
             <a href="" class="thumbnail">
-              <img src="img/portfolio/4.jpg">
+              <img src="img/portfolio/4.jpg" alt="img4" style="width:200px; height:200px;">
             </a>
           </div>
           <div class="col-sm-3">
             <a href="" class="thumbnail">
-              <img src="img/portfolio/5.jpg">
+              <img src="img/portfolio/5.jpg" alt="img5" style="width:200px; height:200px;">
             </a>
           </div>
           <div class="col-sm-4">
             <a href="" class="thumbnail">
-              <img src="img/portfolio/6.jpg">
+              <img src="img/portfolio/6.jpg" alt="img6" style="width:200px; height:200px;">
             </a>
           </div>
           <div class="col-sm-4">
             <a href="" class="thumbnail">
-              <img src="img/portfolio/7.jpeg">
+              <img src="img/portfolio/7.jpeg" alt="img7" style="width:200px; height:200px;">
             </a>
           </div>
         </div>
